# croissantine

./: .gitignore  Cargo.toml  README.md  croissantine.service
src/: available_docids_iter.rs  database.rs  lib.rs  main.rs  ngrams.rs  roaring64_codec.rs  task.rs  treemap_codec.rs
src/text/: diacritics.rs  mod.rs  trigrams.rs  whitespace.rs
templates/: base.html  indexer.html  results.html  welcome.html
