[package]
name = "croissantine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
askama = "0.12.0"
askama_axum = "0.3.0"
axum = "0.6.20"
clap = { version = "4.4.2", features = ["derive"] }
flate2 = "1.0.27"
heed = { version = "0.20.0-alpha.4", features = ["read-txn-no-tls"] }
httparse = "1.8.0"
readability = { path = "../readability", default-features = false }
roaring = "0.10.2"
serde = { version = "1.0.188", features = ["derive"] }
tempfile = "3.8.0"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
ureq = "2.7.1"
url = { version = "2.4.1", features = ["serde"] }
urlencoding = "2.1.3"
warc = { version = "0.3.1", default-features = false }
